fix #42: actually hide the custom hint on the export button so you can't accidentally click on some invisible hitbox

--- a/styles.css
+++ b/styles.css
@@ -601,5 +601,6 @@ input[type="range"]:focus::-ms-fill-upper {
   }
   100% {
     opacity: 0;
+    pointer-events: none;
   }
 }
